# smoltasks

./: Cargo.toml  Dockerfile  LICENSE  docker-build-with-postgres.sh
migrations/00-initialize/: down.sql
migrations/2020-07-23-181936_initial/: up.sql
src/: lib.rs  models.rs  schema.rs  utils.rs
src/api/: mod.rs  todos.rs  user_management.rs  users.rs
web_client/: hotkeys.txt  index.html
web_client/js/: api.js  app.js  date.js  editor.js  login.js  todos.js  utils.js
