[package]
name = "smoltasks"
version = "0.1.0"
authors = ["Aleksejs Popovs <aleksejs@popovs.lv>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "0.2", features = ["macros"] }
warp = "0.2"
diesel = { version = "1.4.4", features = ["sqlite", "r2d2"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scrypt = "0.3"
getrandom = "0.1"
hex = "0.4"
